# AD688_Group5.github.io

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  about.html  career_plan.html  career_plan.qmd  conclusion.html  conclusion.qmd  data_analysis.html  data_analysis.qmd  data_analysis.quarto_ipynb  data_cleaning.html  data_cleaning.qmd  data_cleaning.quarto_ipynb  data_cleaning_for_report.html  data_cleaning_for_report.qmd  eda 2.html  eda.html  eda.qmd  eda_for_report.qmd  final_report.docx  final_report.ipynb  final_report.qmd  index 2.html  index.qmd  introduction.html  introduction.qmd  ml_methods.html  ml_methods.qmd  ml_methods.quarto_ipynb  ml_methods_for_report.qmd  ml_methods_summary.qmd  nlp_methods.html  nlp_methods.qmd  nlp_methods_for_report.qmd  pyproject.toml  research_introduction.html  research_introduction.qmd  (+9 more)
_site/: about 2.html  about.html  career_plan 2.html  career_plan 3.html  career_plan.html  conclusion.html  data_analysis.html  data_cleaning 2.html  data_cleaning.html  data_cleanning.html  eda.html  final_report.docx  index.html  introduction.html  ml_methods 2.html  ml_methods.html  ml_methods_summary.html  nlp_methods 2.html  nlp_methods.html  research_introduction 2.html  research_introduction.html  robots.txt  search.json  sitemap.xml  skill_gap_analysis.html
_site/figures/: Silhouette_Chart.html
figures/: Elbow_Chart.html  Elbow_Percent.html  Silhouette_Chart.html
site_libs/bootstrap/: bootstrap.min.css
workflow/: quarto-publish.yml
