[project]
name = "ad688-group5-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Yixuan Yang",email = "yy486@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "ad688_group5"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
